# protc

./: .gitignore  .ocamlformat  Dockerfile  Makefile  README.md  dune-project  protc.opam
.github/workflows/: run_tests.yml
src/: dune  main.ml
src/ast/: ast.ml  ast.mli  dune
src/inference/: dune
src/lexer/: dune  lexer.mll
src/parser/: dune  parser.mly
test/: dune
